[package]
name = "ecommerce-api"
version = "0.1.0"
authors = ["ModPhoenix <ivanchenko.b@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }