[package]
name = "ecommerce-api"
version = "0.1.0"
authors = ["ModPhoenix <ivanchenko.b@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "migrate", "offline" ] }
dotenv = "0.15.0"
env_logger = "0.8.3"
serde = "1.0.1"
serde_json = "1.0.6"
anyhow = "1.0.40"
chrono = { version = "0.4", features = ["serde"]}
futures = "0.3.14"